--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,11 @@
                     {% endif %}
                     {% if "ADMIN_CONTENT" in g.permissions %}
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item">Export to...</a>
-                        <a class="dropdown-item">Import from...</a>
+                        <a class="dropdown-item" href="{{ url_for('admin.download') }}">Download...</a>
+                        <a class="dropdown-item" onclick="$('#uploadFile').trigger('click');" href="">Upload...</a>
+                        <form action="{{ url_for('admin.upload') }}" method="post" enctype="multipart/form-data">
+                            <input type="file" id="uploadFile" name="file" onchange="this.form.submit();">
+                        </form>
                     {% endif %}
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a>
