--- a/templates/base.html
+++ b/templates/base.html
@@ -55,10 +55,7 @@
                     {% if "ADMIN_CONTENT" in g.permissions %}
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{{ url_for('admin.download') }}">Download...</a>
-                        <a class="dropdown-item" onclick="$('#uploadFile').trigger('click');" href="">Upload...</a>
-                        <form action="{{ url_for('admin.upload') }}" method="post" enctype="multipart/form-data">
-                            <input type="file" id="uploadFile" name="file" onchange="this.form.submit();">
-                        </form>
+                        <a class="dropdown-item" for="uploadFile" onclick="$('#uploadFile').click();" href="">Upload...</a>
                     {% endif %}
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a>
@@ -75,7 +72,9 @@
         </div>
     {% endfor %}
     <div class="container">{% block content %}{% endblock %}</div>
-
+    <form action="{{ url_for('admin.upload') }}" method="post" enctype="multipart/form-data">
+        <input type="file" id="uploadFile" name="file" accept="text/csv" onchange="this.form.submit();">
+    </form>
     <script>
         (function() {
             'use strict';
