--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,11 @@
                     {% endif %}
                     {% if "ADMIN_CONTENT" in g.permissions %}
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{{ url_for('admin.download') }}">Download...</a>
-                        <a class="dropdown-item" for="uploadFile" onclick="$('#uploadFile').click();" href="">Upload...</a>
+                        <a class="dropdown-item" href="{{ url_for('admin.download') }}">Download all</a>
+                        <a class="dropdown-item btn btn-link" for="uploadFile" onclick="$('#uploadFile').click();">Upload file</a>
+                         <form action="{{ url_for('admin.upload') }}" method="post" enctype="multipart/form-data">
+                             <input type="file" id="uploadFile" name="file" accept="text/csv" onchange="this.form.submit();" style="display: none">
+                         </form>
                     {% endif %}
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a>
@@ -72,9 +75,6 @@
         </div>
     {% endfor %}
     <div class="container">{% block content %}{% endblock %}</div>
-    <form action="{{ url_for('admin.upload') }}" method="post" enctype="multipart/form-data">
-        <input type="file" id="uploadFile" name="file" accept="text/csv" onchange="this.form.submit();">
-    </form>
     <script>
         (function() {
             'use strict';
